Replaced x,y,r... with integers (strings before), added more custom exceptions