@@ -1,5 +1,8 @@
 package regions;
 
+import exceptions.InvalidAmountOfPropertiesException;
+import exceptions.InvalidRegionPropertiesException;
+
 import java.util.List;
 
 /**
@@ -17,10 +20,16 @@ public class RectangleRegion extends Region {
      * @param properties A list of strings representing the properties of the rectangle (x, y, width, height).
      */
     public RectangleRegion(List<String> properties) {
-        this.x = Integer.parseInt(properties.getFirst());
-        this.y = Integer.parseInt(properties.get(1));
-        this.width = Integer.parseInt(properties.get(2));
-        this.height = Integer.parseInt(properties.get(3));
+        try {
+            this.x = Integer.parseInt(properties.get(0));
+            this.y = Integer.parseInt(properties.get(1));
+            this.width = Integer.parseInt(properties.get(2));
+            this.height = Integer.parseInt(properties.get(3));
+        } catch (NumberFormatException _) {
+            throw new InvalidRegionPropertiesException();
+        } catch (IndexOutOfBoundsException _) {
+            throw new InvalidAmountOfPropertiesException();
+        }
     }
 
     /**
@@ -35,11 +44,11 @@ public class RectangleRegion extends Region {
     @Override
     public boolean checkRectangle(double x, double y, double width, double height) {
         return x >= this.x &&
-            y >= this.y &&
-            x + width <= this.x + this.width &&
-            y + height <= this.y + this.height &&
-            width <= this.width &&
-            height <= this.height;
+                y >= this.y &&
+                x + width <= this.x + this.width &&
+                y + height <= this.y + this.height &&
+                width <= this.width &&
+                height <= this.height;
     }
 
     /**
@@ -53,13 +62,13 @@ public class RectangleRegion extends Region {
     @Override
     public boolean checkCircle(double cx, double cy, double r) {
         return cx >= this.x &&
-            cx <= this.x + this.width &&
-            cy >= this.y &&
-            cy <= this.y + this.height &&
-            cx - r >= this.x &&
-            cx + r <= this.x + this.width &&
-            cy - r >= this.y &&
-            cy + r <= this.y + this.height;
+                cx <= this.x + this.width &&
+                cy >= this.y &&
+                cy <= this.y + this.height &&
+                cx - r >= this.x &&
+                cx + r <= this.x + this.width &&
+                cy - r >= this.y &&
+                cy + r <= this.y + this.height;
     }
 
     /**
@@ -74,6 +83,6 @@ public class RectangleRegion extends Region {
     @Override
     public boolean checkLine(double x1, double y1, double x2, double y2) {
         return (x1 >= this.x && x1 <= this.x + this.width && y1 >= this.y && y1 <= this.y + this.height) &&
-            (x2 >= this.x && x2 <= this.x + this.width && y2 >= this.y && y2 <= this.y + this.height);
+                (x2 >= this.x && x2 <= this.x + this.width && y2 >= this.y && y2 <= this.y + this.height);
     }
 }
